name:                rhm-io-iter
version:             0.1.0.0
description:
  This package contains the code examples for a code about Iteratees
  held at the Regensburg Haskell Meetup on December 3rd, 2014.
license:             BSD3
license-file:        LICENSE
author:              Alexander Lehmann
maintainer:          afwlehmann@googlemail.com
copyright:           copyright (c) 2014 by Alexander Lehmann
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     RHM.Input
                     , RHM.Intern.Pure
                     , RHM.Intern.Trans
                     , RHM.Iteratee
                     , RHM.IterateeT
                     , RHM.Enumerator
                     , RHM.EnumeratorT
                     , RHM.Enumeratee
                     , RHM.EnumerateeT
  build-depends:       base >= 4.7 && < 4.8
                     , formatting >= 5.4 && < 6.0
                     , transformers >= 0.4.2 && < 0.5
                     , mtl >= 2.2.1 && < 2.3
                     , text >= 1.2.0 && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lazyio-demo
  main-is:             LazyIO.hs
  build-depends:       base >= 4.7 && < 4.8
                     , bytestring >=0.10 && <0.11
                     , pureMD5 >=2.1 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:       -main-is LazyIO

executable iter-demo
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 4.8
                     , formatting >= 5.4 && < 6.0
                     , transformers >= 0.4.2 && < 0.5
                     , mtl >= 2.2.1 && < 2.3
                     , rhm-io-iter
                     , text >= 1.2.0 && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
